--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ omit =
     # Omit the tests
     */tests/*
     # Omit generated versioneer
-    openmembrane/_version.py
+    omembrane/_version.py
 
 [yapf]
 # YAPF, in .style.yapf files this shows up as "[style]" header
@@ -22,9 +22,10 @@ max-line-length = 119
 # Automatic version numbering scheme
 VCS = git
 style = pep440
-versionfile_source = openmembrane/_version.py
-versionfile_build = openmembrane/_version.py
+versionfile_source = omembrane/_version.py
+versionfile_build = omembrane/_version.py
 tag_prefix = ''
 
 [aliases]
 test = pytest
+
