--- a/devtools/conda-envs/production_env.yaml
+++ b/devtools/conda-envs/production_env.yaml
@@ -4,10 +4,10 @@ channels:
 - defaults
 dependencies:
 - python
-- setuptools
-- numpy
+- pip
+- setuptools >=61.0
+- versioningit~=2.0
+- molsysmt
 - pyunitwizard
 - openmm
 - nglview
-- ipywidgets <8
-- molsysmt
