--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -4,14 +4,13 @@ channels:
 - defaults
 dependencies:
 - python
-- setuptools
-- numpy
+- pip
+- setuptools >=61.0
+- versioningit~=2.0
+- molsysmt
 - pyunitwizard
 - openmm
 - nglview
-- ipywidgets <8
-- molsysmt
 - pytest
-- pip
 - pytest-cov
 - codecov
